Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNPQdGmgpf442KvGQSp2Znf",
+      "authorship_tag": "ABX9TyNiiI8wUu1uy+1lkJqXJu4l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,68 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# メモ\n",
+        "# メモ\n"
+      ],
+      "metadata": {
+        "id": "qHX8nfTRmqJq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# colab でプログラムを作って実行する\n",
+        "# !g++ temp.cpp; echo  |./a.out\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main() {\n",
+        "  cout << \"Hello World!\" << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "JFJZUouD5YM5",
+        "outputId": "52ec0dee-74bb-49fe-9b3e-d3acbfc62bb7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo  |./a.out"
+      ],
+      "metadata": {
+        "id": "0smnD4hN5vNd",
+        "outputId": "2e21a9aa-244d-4b0c-d1b1-de6a1cc6f331",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "厳選！C++ アルゴリズム実装に使える 25 の STL 機能【前編】\n",
         "\n",
@@ -100,7 +161,7 @@
         "ソートを極める！ 〜 なぜソートを学ぶのか 〜\n"
       ],
       "metadata": {
-        "id": "qHX8nfTRmqJq"
+        "id": "PwMvQFA_Y3G7"
       }
     },
     {
@@ -118,58 +179,6 @@
       "metadata": {
         "id": "NZS3bb5PFeAP"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# colab でプログラムを作って実行する => %%writefile temp.cpp => !g++ temp.cpp; echo |./a.out\n",
-        "%%writefile temp.cpp\n",
-        "# include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "int main() {\n",
-        "  cout << \"Hello World!\" << endl;\n",
-        "}"
-      ],
-      "metadata": {
-        "id": "JFJZUouD5YM5",
-        "outputId": "52ec0dee-74bb-49fe-9b3e-d3acbfc62bb7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting temp.cpp\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!g++ temp.cpp; echo |./a.out"
-      ],
-      "metadata": {
-        "id": "0smnD4hN5vNd",
-        "outputId": "2e21a9aa-244d-4b0c-d1b1-de6a1cc6f331",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello World!\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -3022,7 +3031,7 @@
         "id": "zN3Am4y87BHm",
         "outputId": "322495eb-bde8-45a1-dd46-5d6a7a0c0afc"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3036,7 +3045,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp; echo 10 1 2 3 4 1 2 3 1 2 1   2 0 9 1 0 9 2|./a.out"
+        "!g++ temp.cpp; echo 10 1 2 3 4 1 2 3 1 2 1   2 0 9 1 0 9 2 |./a.out"
       ],
       "metadata": {
         "id": "WJJ5P1lNF8Rx",
@@ -3045,7 +3054,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
