--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPfgZIJ8vef/mohBSBzYir9",
+      "authorship_tag": "ABX9TyPClVWpMOM4cldg3yGMPjSe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 78,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -3269,7 +3269,7 @@
         },
         "outputId": "8b03e347-264a-4572-e4c5-3a47d34f3c4f"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3292,7 +3292,7 @@
         "id": "9glG727KUuWh",
         "outputId": "e7c3c2d7-4b43-4115-be9f-e19b446a608c"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3327,7 +3327,7 @@
         },
         "outputId": "e677ffaf-d0cd-44f9-a3d8-13cdfda61c3e"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3350,7 +3350,7 @@
         "id": "eN--aMtCV1Ef",
         "outputId": "c05a824f-4591-4610-b1f2-dba4a003a43a"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3386,7 +3386,7 @@
         },
         "outputId": "fec5e20b-a371-4849-e4a3-e8b6936b4f48"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3409,7 +3409,123 @@
         "id": "5O2dN4sMWWJq",
         "outputId": "a20eb46d-49d5-4027-d1f2-c95d8429a9cd"
       },
-      "execution_count": 88,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 ITP1_2_C: Sorting Three Numbers\n",
+        "# ３つの整数を読み込み、それらを値が小さい順に並べて出力する。\n",
+        "# 例: 3 1 8 => 1 3 8\n",
+        "%%writefile temp.ts\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : number[] = input.trim().split(/[\\n\\s,;.]+/).map((n) => Number(n))\n",
+        "args.sort()\n",
+        "console.log(args[0], args[1], args[2])"
+      ],
+      "metadata": {
+        "id": "iyoXo1SGx5l7",
+        "outputId": "dd53954e-8f41-42c6-9b92-64a301b0fd06",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo 3 1 8 | node temp.js #=> 1 3 8"
+      ],
+      "metadata": {
+        "id": "eQ_R9WATa-tg",
+        "outputId": "8e8c3db3-20f5-4e95-86b4-c84606954683",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[33m1\u001b[39m \u001b[33m3\u001b[39m \u001b[33m8\u001b[39m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 ITP1_2_D: Circle in a Rectangle\n",
+        "# 長方形の中に円が含まれるかを判定する。長方形は左下の頂点を原点とし、\n",
+        "# 右上の頂点の座標 ($W$, $H$) が与えられ、円はその中心の座標 ($x$, $y$)と半径 $r$ が与えられる。\n",
+        "# 例: 5 4 2 2 1 => Yes\n",
+        "%%writefile temp.ts\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : number[] = input.trim().split(/[\\n\\s,;.]+/).map((n) => Number(n))\n",
+        "let w = args[0];\n",
+        "let h = args[1];\n",
+        "let x = args[2];\n",
+        "let y = args[3];\n",
+        "let r = args[4];\n",
+        "let s : string;\n",
+        "if ((x >= r) && ((w - x) >= r) && (y >= r) && ((h - y) >= r))\n",
+        "    s = \"Yes\";\n",
+        "else\n",
+        "    s = \"No\";\n",
+        "console.log(s)"
+      ],
+      "metadata": {
+        "id": "UpNiAmlPx62S",
+        "outputId": "eabc4ec9-2682-45ae-ee03-444035132d9a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo 5 4 2 2 1 | node temp.js #=> Yes"
+      ],
+      "metadata": {
+        "id": "XfmOFuMhcAot",
+        "outputId": "d449b6fe-2974-4639-f2bc-b259cfd87e9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -3427,120 +3543,6 @@
       },
       "source": [
         "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "41lNXMaAW3Df"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "yq0Mlp7bW2_O"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 問題 ITP1_2_C: Sorting Three Numbers\n",
-        "３つの整数を読み込み、それらを値が小さい順に並べて出力する。\n",
-        "\n",
-        "例: 3 1 8 => 1 3 8"
-      ],
-      "metadata": {
-        "id": "iyoXo1SGx5l7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uUarukR2PdvK",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4e9f985f-1561-4c85-e4f8-efa0fdc138bb"
-      },
-      "source": [
-        "%%script node\n",
-        "let input = require('fs').readFileSync('/dev/stdin', 'utf8')\n",
-        "input = \"3 1 8 \"\n",
-        "let arr = input.split(\" \").filter(item => item !== \"\").map(item => parseInt(item));\n",
-        "arr.sort();\n",
-        "console.log(arr[0], arr[1], arr[2])"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1 3 8\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 問題 ITP1_2_D: Circle in a Rectangle\n",
-        "長方形の中に円が含まれるかを判定する。長方形は左下の頂点を原点とし、右上の頂点の座標 ($W$, $H$) が与えられ、円はその中心の座標 ($x$, $y$)と半径 $r$ が与えられる。\n",
-        "\n",
-        "例: 5 4 2 2 1 => Yes"
-      ],
-      "metadata": {
-        "id": "UpNiAmlPx62S"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Uujr1e4OCXdA",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "715d1539-d331-4d51-c29d-930ad9371aa2"
-      },
-      "source": [
-        "%%script node\n",
-        "let input = require('fs').readFileSync('/dev/stdin', 'utf8')\n",
-        "input = \"5 4 2 2 1 \"\n",
-        "let arr = input.split(\" \").filter(item => item !== \"\").map(item => parseInt(item));\n",
-        "let w = arr[0];\n",
-        "let h = arr[1];\n",
-        "let x = arr[2];\n",
-        "let y = arr[3];\n",
-        "let r = arr[4];\n",
-        "if ((x >= r) && ((w - x) >= r) && (y >= r) && ((h - y) >= r))\n",
-        "    s = \"Yes\";\n",
-        "else\n",
-        "    s = \"No\";\n",
-        "console.log(s)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Yes\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
