Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPvCk/JL3k1vOlxrQmyw8FI",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNYyjFst+NVMe1tfuYm//uN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +49,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 13,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -3684,11 +3685,11 @@
         "!tsc temp.ts; echo 3 5 11 7 8 19 0 0 | node temp.js"
       ],
       "metadata": {
-        "id": "HvP3J5bFuWCK",
-        "outputId": "1ad597f3-a6fb-4cc5-efe0-b2ff446cd227",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HvP3J5bFuWCK",
+        "outputId": "1ad597f3-a6fb-4cc5-efe0-b2ff446cd227"
       },
       "execution_count": 31,
       "outputs": [
@@ -3746,11 +3747,11 @@
         "!tsc temp.ts; echo 5 14 80 | node temp.js #=> 3"
       ],
       "metadata": {
-        "id": "uY6Dftc5u2U_",
-        "outputId": "8b36506d-3cec-4a1c-e498-88883de03439",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uY6Dftc5u2U_",
+        "outputId": "8b36506d-3cec-4a1c-e498-88883de03439"
       },
       "execution_count": 43,
       "outputs": [
@@ -3808,11 +3809,11 @@
         "!tsc temp.ts; echo 3 2 | node temp.js #=> 1 1 1.50000"
       ],
       "metadata": {
-        "id": "d2RuWBLR29HB",
-        "outputId": "7516d9d4-72f4-4137-ff17-eb98ec7cc9d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "d2RuWBLR29HB",
+        "outputId": "7516d9d4-72f4-4137-ff17-eb98ec7cc9d9"
       },
       "execution_count": 47,
       "outputs": [
@@ -3864,11 +3865,11 @@
         "!tsc temp.ts; echo 3 | node temp.js #=> 28.274334 18.849556"
       ],
       "metadata": {
-        "id": "rI36ty3a3a4i",
-        "outputId": "bf948262-5e09-42a4-c9d9-8d2535435aa4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rI36ty3a3a4i",
+        "outputId": "bf948262-5e09-42a4-c9d9-8d2535435aa4"
       },
       "execution_count": 51,
       "outputs": [
@@ -3877,6 +3878,140 @@
           "name": "stdout",
           "text": [
             "28.274334 18.849556\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 ITP1_4_C: Simple Calculator\n",
+        "# ２つの整数 a, b と１つの演算子 op を読み込んで、a op b を計算する。\n",
+        "# 演算子 op は、\"+\"(和)、\"-\"(差)、\"*\"(積)、\"/\"(商)、のみとし、\n",
+        "# 割り算で割り切れない場合は、小数点以下を切り捨てたものを計算結果とする。\n",
+        "# op が '?' のとき 入力の終わり。\n",
+        "# 例: 1 + 2 56 - 18 13 * 2 100 / 10 27 + 81 0 ? 0  => 3  38  26  10  108  \n",
+        "%%writefile temp.ts\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : string[] = input.trim().split(/[\\n\\s,;.]+/)\n",
+        "\n",
+        "for (let i = 0; i < args.length; i++) {\n",
+        "    if (i % 3 !== 0) continue;\n",
+        "    let a = Number(args[i]);\n",
+        "    let op = args[i + 1];\n",
+        "    let b = Number(args[i + 2]);\n",
+        "    if (op == \"?\") break;\n",
+        "    if (op == '+') console.log(a + b);\n",
+        "    else if (op == '-') console.log(a - b);\n",
+        "    else if (op == '*') console.log(a * b);\n",
+        "    else if (op == '/') console.log(Math.floor(a / b));\n",
+        "    else console.log(\"error\");\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "t09FxOa1SSaR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "052a6ea7-a0c2-499f-c707-76352f2cc72e"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo -e \"1 + 2 56 - 18 13 * 2 100 / 10 27 + 81 0 ? 0\" | node temp.js #=> 3  38  26  10  108  "
+      ],
+      "metadata": {
+        "id": "t2I7YyTfH6pl",
+        "outputId": "a9d38ba8-4eba-49bc-f511-68f9b3bceb10",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[33m3\u001b[39m\n",
+            "\u001b[33m38\u001b[39m\n",
+            "\u001b[33m26\u001b[39m\n",
+            "\u001b[33m10\u001b[39m\n",
+            "\u001b[33m108\u001b[39m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo -e \"1 + 2 1 * 2 1 - 2 1 / 2 0 ? 0 \" | node temp.js #=> 3 2 -1 0"
+      ],
+      "metadata": {
+        "id": "rtcWt6fqIlIK",
+        "outputId": "ae8bb095-288c-4f82-89c0-81ce3d1e635b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[33m3\u001b[39m\n",
+            "\u001b[33m2\u001b[39m\n",
+            "\u001b[33m-1\u001b[39m\n",
+            "\u001b[33m0\u001b[39m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 ITP1_4_D: Min, Max and Sum\n",
+        "# n 個の整数 a_i について、最大値、最小値、合計値を求める。 最初の値が個数を示す\n",
+        "# 例: 5 10 1 5 4 17 => 1 17 37\n",
+        "# reduce の使い方\n",
+        "%%writefile temp.ts\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : number[] = input.trim().split(/[\\n\\s,;.]+/).map((n) => Number(n))\n",
+        "\n",
+        "args.splice(0,1)\n",
+        "\n",
+        "let minnum = args.reduce((a,b)=> Math.min(a,b));\n",
+        "let maxnum = args.reduce((a,b)=> Math.max(a,b));\n",
+        "let sum= args.reduce((a,b) => a + b);\n",
+        "\n",
+        "console.log( minnum + \" \" + maxnum + \" \" + sum)"
+      ],
+      "metadata": {
+        "id": "xSXjkxUWSTov",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dcc2a7a7-2345-4b7c-ea7e-979de15e9e95"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
           ]
         }
       ]
@@ -3893,109 +4028,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# 問題 ITP1_4_C: Simple Calculator\n",
-        "# ２つの整数 a, b と１つの演算子 op を読み込んで、a op b を計算する。\n",
-        "# 演算子 op は、\"+\"(和)、\"-\"(差)、\"*\"(積)、\"/\"(商)、のみとし、\n",
-        "# 割り算で割り切れない場合は、小数点以下を切り捨てたものを計算結果とする。\n",
-        "# op が '?' のとき 入力の終わり。\n",
-        "# 例: 1 + 2 56 - 18 13 * 2 100 / 10 27 + 81 0 ? 0  => 3  38  26  10  108  \n",
-        "%%writefile temp.ts\n",
-        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
-        "let args : string[] = input.trim().split(/[\\n\\s,;.]+/)\n",
-        "\n"
+        "!tsc temp.ts; echo 5 10 1 5 4 17 | node temp.js #=> 1 17 37"
       ],
       "metadata": {
-        "id": "t09FxOa1SSaR"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "IG_g5ecpLu2h",
+        "id": "CvrOJw4KJHKD",
+        "outputId": "55a9b5bf-ea6c-4732-96ff-04815202b3f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "044476b0-b79f-4bba-f835-6d8a649f5b5b"
-      },
-      "source": [
-        "%%script node\n",
-        "let input = require('fs').readFileSync('/dev/stdin', 'utf8');\n",
-        "input = \"1 + 2 1 * 2 1 - 2 1 / 2 0 ? 0 \"\n",
-        "let expr = input.split(/[\\n\\s]/).filter(item => item !== \"\");\n",
-        "for (let i = 0; i < expr.length; i++) {\n",
-        "    if (i % 3 !== 0) continue;\n",
-        "    let a = parseInt(expr[i]);\n",
-        "    let op = expr[i + 1];\n",
-        "    let b = parseInt(expr[i + 2]);\n",
-        "    if (op == \"?\") break;\n",
-        "    if (op == '+') console.log(a + b);\n",
-        "    else if (op == '-') console.log(a - b);\n",
-        "    else if (op == '*') console.log(a * b);\n",
-        "    else if (op == '/') console.log(Math.floor(a / b));\n",
-        "    else console.log(\"error\");\n",
-        "}\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "3\n",
-            "2\n",
-            "-1\n",
-            "0\n"
-          ],
-          "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 問題 ITP1_4_D: Min, Max and Sum\n",
-        "n 個の整数 $a_i(i=1,2, \\dots n)$について、最大値、最小値、合計値を求める。 最初の値が個数を示す。\n",
-        "\n",
-        "例: 5 10 1 5 4 17 => 1 17 37\n"
-      ],
-      "metadata": {
-        "id": "xSXjkxUWSTov"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xs2uvrODElJy",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "cd6901d0-9195-4aca-e43b-c04c4692d55f"
-      },
-      "source": [
-        "%%script node\n",
-        "let input = require('fs').readFileSync('/dev/stdin', 'utf8');\n",
-        "input = \"5 10 1 5 4 17 \"\n",
-        "let expr = input.split(/[\\n\\s]/).filter(item => item !== \"\").map(Number);\n",
-        "expr.splice(0,1)\n",
-        "\n",
-        "let minnum = expr.reduce((a,b)=> Math.min(a,b));\n",
-        "let maxnum = expr.reduce((a,b)=> Math.max(a,b));\n",
-        "let sum= expr.reduce((a,b) => a + b);\n",
-        "\n",
-        "console.log( minnum + \" \" + maxnum + \" \" + sum)"
-      ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "[ 10, 1, 5, 4, 17 ]\n",
             "1 17 37\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -4004,8 +4053,7 @@
       "source": [
         "# 問題 ITP1_5_A: Print a Rectangle\n",
         "たて H cm よこ W cm の長方形を描く。 '#'で表す。 0, 0 のとき入力の終わり。\n",
-        "\n",
-        "例: 3 4 5 6 2 2 0 0 =>  \n"
+        "例: 3 4 5 6 2 2 0 0 =>  "
       ],
       "metadata": {
         "id": "R32rAAK3d9o1"
