--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNYyjFst+NVMe1tfuYm//uN",
+      "authorship_tag": "ABX9TyNUQXbjjmA3NYoIrBesB4Z4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 52,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -3553,7 +3553,7 @@
         },
         "outputId": "1fa079e2-8360-4fdf-ac30-e6c7d6c27b59"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3597,7 +3597,7 @@
         },
         "outputId": "a19bca04-1ba5-4276-917f-d8a3400e6a3e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3620,7 +3620,7 @@
         "id": "oc21vnLQica2",
         "outputId": "8d46add6-9434-4d6d-a2cb-483a3083cdb6"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3668,7 +3668,7 @@
         },
         "outputId": "9d0f7535-01ca-4d9b-8681-c2080df54d78"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3691,7 +3691,7 @@
         "id": "HvP3J5bFuWCK",
         "outputId": "1ad597f3-a6fb-4cc5-efe0-b2ff446cd227"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3730,7 +3730,7 @@
         },
         "outputId": "84a6a647-c67b-4a0b-c4a2-91f44853abf4"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3753,7 +3753,7 @@
         "id": "uY6Dftc5u2U_",
         "outputId": "8b36506d-3cec-4a1c-e498-88883de03439"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3792,7 +3792,7 @@
         },
         "outputId": "b6a86122-d72f-456a-a999-94889fc1d744"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3815,7 +3815,7 @@
         "id": "d2RuWBLR29HB",
         "outputId": "7516d9d4-72f4-4137-ff17-eb98ec7cc9d9"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3848,7 +3848,7 @@
         },
         "outputId": "a58b344b-a2b6-472b-9b70-6fcb1deeca1e"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3871,7 +3871,7 @@
         "id": "rI36ty3a3a4i",
         "outputId": "bf948262-5e09-42a4-c9d9-8d2535435aa4"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3915,7 +3915,7 @@
         },
         "outputId": "052a6ea7-a0c2-499f-c707-76352f2cc72e"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3938,7 +3938,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3965,7 +3965,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4005,13 +4005,200 @@
         },
         "outputId": "dcc2a7a7-2345-4b7c-ea7e-979de15e9e95"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo 5 10 1 5 4 17 | node temp.js #=> 1 17 37"
+      ],
+      "metadata": {
+        "id": "CvrOJw4KJHKD",
+        "outputId": "55a9b5bf-ea6c-4732-96ff-04815202b3f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 17 37\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 ITP1_5_A: Print a Rectangle\n",
+        "# たて H cm よこ W cm の長方形を描く。 '#'で表す。 0, 0 のとき入力の終わり。\n",
+        "# 例: 3 4 5 6 2 2 0 0 =>  \n",
+        "%%writefile temp.ts\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : number[] = input.trim().split(/[\\n\\s,;.]+/).map((n) => Number(n))\n",
+        "\n",
+        "let H = 0;\n",
+        "let W = 0;\n",
+        "let box = \"\";\n",
+        "\n",
+        "for (let i = 0; i < args.length; i++){\n",
+        "    if (i%2 !== 0) continue;\n",
+        "    H = args[i];\n",
+        "    W = args[i+1];\n",
+        "    if (H==0 && W==0) break;\n",
+        "    box = (\"#\".repeat(W)+\"\\n\").repeat(H);\n",
+        "    console.log(box)\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "R32rAAK3d9o1",
+        "outputId": "4563191d-1fdd-4ee8-d4cd-e4fcd190abd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo 3 4 5 6 2 2 0 0 | node temp.js"
+      ],
+      "metadata": {
+        "id": "1V1qPpnRjdmR",
+        "outputId": "4efe33a5-4c61-4b02-bc13-e38539c9fe20",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "####\n",
+            "####\n",
+            "####\n",
+            "\n",
+            "######\n",
+            "######\n",
+            "######\n",
+            "######\n",
+            "######\n",
+            "\n",
+            "##\n",
+            "##\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 ITP1_5_B: Print a Frame\n",
+        "# たて \"H\" cm よこ \"W\" cm の枠を描く。\n",
+        "# \"H\", \"W\" がともに 0 のとき、入力の終わり。\n",
+        "# 例: 3 4 5 6 3 3 0 0 =>  \n",
+        "%%writefile temp.ts\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : number[] = input.trim().split(/[\\n\\s,;.]+/).map((n) => Number(n))\n",
+        "\n",
+        "let H = 0;\n",
+        "let W = 0;\n",
+        "let box = \"\";\n",
+        "\n",
+        "for (let i = 0; i < args.length; i++) {\n",
+        "    if (i % 2 !== 0) continue;\n",
+        "    H = args[i];\n",
+        "    W = args[i + 1];\n",
+        "    if (H == 0 && W == 0) break;\n",
+        "    // box = (\"#\".repeat(W) + \"\\n\").repeat(H);\n",
+        "\n",
+        "    for (let i = 0; i < H; i++) {\n",
+        "        if ((i == 0) || (i == H - 1)) {\n",
+        "            box += \"#\".repeat(W) + \"\\n\";\n",
+        "        }\n",
+        "        else {\n",
+        "            box += \"#\" + \".\".repeat(W - 2) + \"#\" + \"\\n\";\n",
+        "        }\n",
+        "    }\n",
+        "    console.log(box);\n",
+        "    box = \"\";\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "MFuMIws1d_UU",
+        "outputId": "52f7b663-bc79-4eb0-958a-c6d2de4d901b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo 3 4 5 6 3 3 0 0 | node temp.js"
+      ],
+      "metadata": {
+        "id": "EGbId8qAjzLu",
+        "outputId": "46476e74-0f3c-43be-e259-a6156090a8e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "####\n",
+            "#..#\n",
+            "####\n",
+            "\n",
+            "######\n",
+            "#....#\n",
+            "#....#\n",
+            "#....#\n",
+            "######\n",
+            "\n",
+            "###\n",
+            "#.#\n",
+            "###\n",
+            "\n"
           ]
         }
       ]
@@ -4028,175 +4215,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo 5 10 1 5 4 17 | node temp.js #=> 1 17 37"
-      ],
-      "metadata": {
-        "id": "CvrOJw4KJHKD",
-        "outputId": "55a9b5bf-ea6c-4732-96ff-04815202b3f6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1 17 37\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 問題 ITP1_5_A: Print a Rectangle\n",
-        "たて H cm よこ W cm の長方形を描く。 '#'で表す。 0, 0 のとき入力の終わり。\n",
-        "例: 3 4 5 6 2 2 0 0 =>  "
-      ],
-      "metadata": {
-        "id": "R32rAAK3d9o1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "apg_mM_ROetZ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e27fae05-4217-4740-d278-5c29d9cb5b2c"
-      },
-      "source": [
-        "%%script node\n",
-        "let input = require('fs').readFileSync('/dev/stdin', 'utf8');\n",
-        "input = \"3 4 5 6 2 2 0 0\"\n",
-        "let expr = input.split(/[\\n\\s]/).filter(item => item !== \"\").map(Number);\n",
-        "\n",
-        "let H = 0;\n",
-        "let W = 0;\n",
-        "let box = \"\";\n",
-        "\n",
-        "for (let i = 0; i < expr.length; i++){\n",
-        "    if (i%2 !== 0) continue;\n",
-        "    H = expr[i];\n",
-        "    W = expr[i+1];\n",
-        "    if (H==0 && W==0) break;\n",
-        "    box = (\"#\".repeat(W)+\"\\n\").repeat(H);\n",
-        "    console.log(box)\n",
-        "}"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "####\n",
-            "####\n",
-            "####\n",
-            "\n",
-            "######\n",
-            "######\n",
-            "######\n",
-            "######\n",
-            "######\n",
-            "\n",
-            "##\n",
-            "##\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 問題 ITP1_5_B: Print a Frame\n",
-        "たて \"H\" cm よこ \"W\" cm の枠を描く。\n",
-        "\"H\", \"W\" がともに 0 のとき、入力の終わり。\n",
-        "\n",
-        "例: 3 4 5 6 3 3 0 0 =>  "
-      ],
-      "metadata": {
-        "id": "MFuMIws1d_UU"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5zFzjE0lR2dZ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "74e510a0-fef2-4095-e621-2deb93d735a8"
-      },
-      "source": [
-        "%%script node\n",
-        "let input = require('fs').readFileSync('/dev/stdin', 'utf8');\n",
-        "input = \"3 4 5 6 3 3 0 0\"\n",
-        "let expr = input.split(/[\\n\\s]/).filter(item => item !== \"\").map(Number);\n",
-        "\n",
-        "let H = 0;\n",
-        "let W = 0;\n",
-        "let box = \"\";\n",
-        "\n",
-        "for (let i = 0; i < expr.length; i++) {\n",
-        "    if (i % 2 !== 0) continue;\n",
-        "    H = expr[i];\n",
-        "    W = expr[i + 1];\n",
-        "    if (H == 0 && W == 0) break;\n",
-        "    // box = (\"#\".repeat(W) + \"\\n\").repeat(H);\n",
-        "\n",
-        "    for (let i = 0; i < H; i++) {\n",
-        "        if ((i == 0) || (i == H - 1)) {\n",
-        "            box += \"#\".repeat(W) + \"\\n\";\n",
-        "        }\n",
-        "        else {\n",
-        "            box += \"#\" + \".\".repeat(W - 2) + \"#\" + \"\\n\";\n",
-        "        }\n",
-        "    }\n",
-        "    console.log(box);\n",
-        "    box = \"\";\n",
-        "}"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "####\n",
-            "#..#\n",
-            "####\n",
-            "\n",
-            "######\n",
-            "#....#\n",
-            "#....#\n",
-            "#....#\n",
-            "######\n",
-            "\n",
-            "###\n",
-            "#.#\n",
-            "###\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# 問題 ITP1_5_C: Print a Chessboard\n",
-        "チェスボードの描画。\n",
-        "たて H cm よこ W cm のチェック柄の長方形を描く。 左上が \"#\"。H、W がともに 0 のとき、入力の終わり。\n",
-        "\n",
-        "例: 3 4 5 6 3 3 2 2 1 1 0 0 =>"
+        "# チェスボードの描画。\n",
+        "# たて H cm よこ W cm のチェック柄の長方形を描く。 左上が \"#\"。H、W がともに 0 のとき、入力の終わり。\n",
+        "# 例: 3 4 5 6 3 3 2 2 1 1 0 0 =>\n"
       ],
       "metadata": {
         "id": "9N4Fbcu3eApD"
