Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNUQXbjjmA3NYoIrBesB4Z4",
+      "authorship_tag": "ABX9TyPbRozrvDJDC/wOctrmHqbJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 59,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -4064,10 +4064,10 @@
       ],
       "metadata": {
         "id": "R32rAAK3d9o1",
-        "outputId": "4563191d-1fdd-4ee8-d4cd-e4fcd190abd9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4563191d-1fdd-4ee8-d4cd-e4fcd190abd9"
       },
       "execution_count": 60,
       "outputs": [
@@ -4086,11 +4086,11 @@
         "!tsc temp.ts; echo 3 4 5 6 2 2 0 0 | node temp.js"
       ],
       "metadata": {
-        "id": "1V1qPpnRjdmR",
-        "outputId": "4efe33a5-4c61-4b02-bc13-e38539c9fe20",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1V1qPpnRjdmR",
+        "outputId": "4efe33a5-4c61-4b02-bc13-e38539c9fe20"
       },
       "execution_count": 61,
       "outputs": [
@@ -4151,10 +4151,10 @@
       ],
       "metadata": {
         "id": "MFuMIws1d_UU",
-        "outputId": "52f7b663-bc79-4eb0-958a-c6d2de4d901b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "52f7b663-bc79-4eb0-958a-c6d2de4d901b"
       },
       "execution_count": 62,
       "outputs": [
@@ -4173,11 +4173,11 @@
         "!tsc temp.ts; echo 3 4 5 6 3 3 0 0 | node temp.js"
       ],
       "metadata": {
-        "id": "EGbId8qAjzLu",
-        "outputId": "46476e74-0f3c-43be-e259-a6156090a8e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EGbId8qAjzLu",
+        "outputId": "46476e74-0f3c-43be-e259-a6156090a8e9"
       },
       "execution_count": 63,
       "outputs": [
@@ -4204,51 +4204,24 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HX6cdlafwp0v"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 問題 ITP1_5_C: Print a Chessboard\n",
         "# チェスボードの描画。\n",
         "# たて H cm よこ W cm のチェック柄の長方形を描く。 左上が \"#\"。H、W がともに 0 のとき、入力の終わり。\n",
-        "# 例: 3 4 5 6 3 3 2 2 1 1 0 0 =>\n"
-      ],
-      "metadata": {
-        "id": "9N4Fbcu3eApD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ATwEg6ziglcO",
-        "outputId": "6c1dfa78-e6a8-4e07-f336-f9b4001cabb0"
-      },
-      "source": [
-        "%%script node\n",
-        "let input = require('fs').readFileSync('/dev/stdin', 'utf8');\n",
-        "input = \"3 4 5 6 3 3 2 2 1 1 0 0\"\n",
-        "let expr = input.split(/[\\n\\s]/).filter(item => item !== \"\").map(Number);\n",
+        "# 例: 3 4 5 6 3 3 2 2 1 1 0 0 =>\n",
+        "%%writefile temp.ts\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : number[] = input.trim().split(/[\\n\\s,;.]+/).map((n) => Number(n))\n",
         "\n",
         "let H = 0;\n",
         "let W = 0;\n",
         "let box = \"\";\n",
         "\n",
-        "for (let i = 0; i < expr.length; i++) {\n",
+        "for (let i = 0; i < args.length; i++) {\n",
         "    if (i % 2 !== 0) continue;\n",
-        "    H = expr[i];\n",
-        "    W = expr[i + 1];\n",
+        "    H = args[i];\n",
+        "    W = args[i + 1];\n",
         "    if (H == 0 && W == 0) break;\n",
         "    // box = (\"#\".repeat(W) + \"\\n\").repeat(H);\n",
         "\n",
@@ -4264,12 +4237,43 @@
         "    }\n",
         "    console.log(box);\n",
         "    box = \"\";\n",
-        "}\n"
+        "}"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "9N4Fbcu3eApD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2e29b5b2-ff74-48c8-f81e-90cb783d740b"
+      },
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo 3 4 5 6 3 3 2 2 1 1 0 0 | node temp.js"
+      ],
+      "metadata": {
+        "id": "m3d7n-XpscQb",
+        "outputId": "cb1eb24c-8d46-4eda-ec0b-31ee065d73f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
           "text": [
             "#.#.\n",
             ".#.#\n",
@@ -4290,8 +4294,7 @@
             "\n",
             "#\n",
             "\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -4299,30 +4302,13 @@
       "cell_type": "code",
       "source": [
         "# 問題 ITP1_5_D: Structured Programming\n",
-        "整数 n 以下の3の倍数または3のつく数を出力する。先頭は空白。\n",
+        "# 整数 n 以下の3の倍数または3のつく数を出力する。先頭は空白。\n",
+        "# 例: 30 => 3 6 9 12 13 15 18 21 23 24 27 30\n",
+        "%%writefile temp.ts\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : number[] = input.trim().split(/[\\n\\s,;.]+/).map((n) => Number(n))\n",
         "\n",
-        "例: 3 => 3 6 9 12 13 15 18 21 23 24 27 30\n"
-      ],
-      "metadata": {
-        "id": "5FNV97PxeD1T"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gY5lsTG6i5k5",
-        "outputId": "7857452f-0926-4986-e14b-a80a4b97bd75"
-      },
-      "source": [
-        "%%script node\n",
-        "let input = require('fs').readFileSync('/dev/stdin', 'utf8');\n",
-        "input = \"30\";\n",
-        "const n = parseInt(input);\n",
+        "const n =args[0]\n",
         "let arr = Array.from({ length: n }, (a, b) => b + 1);\n",
         "const has3 = num => String(num).indexOf('3');\n",
         "arr = arr.filter(num => ((has3(num) !== -1) || num % 3 === 0));\n",
@@ -4332,24 +4318,62 @@
         "}\n",
         "console.log(s)"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "5FNV97PxeD1T",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2d070bf3-79fb-46ad-e20d-e0c89888595c"
+      },
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            " 3 6 9 12 13 15 18 21 23 24 27 30\n"
-          ],
-          "name": "stdout"
+            "Overwriting temp.ts\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "!tsc temp.ts; echo 30 | node temp.js #=> 3 6 9 12 13 15 18 21 23 24 27 30"
+      ],
+      "metadata": {
+        "id": "2QDI8y8As_CO",
+        "outputId": "7fc05738-cca4-4c2d-b630-fa43e0c156ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " 3 6 9 12 13 15 18 21 23 24 27 30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HX6cdlafwp0v"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 問題 ITP1_6_A: Reversing Numbers\n",
-        "与えられた数列を逆順に出力する。\n",
-        "\n",
-        "例: 5 1 2 3 4 5 => 5 4 3 2 1\n"
+        "# 与えられた数列を逆順に出力する。\n",
+        "# 例: 5 1 2 3 4 5 => 5 4 3 2 1\n"
       ],
       "metadata": {
         "id": "9L0wG7bihNoT"
