Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNiiI8wUu1uy+1lkJqXJu4l",
+      "authorship_tag": "ABX9TyMtRCkKeviN1tIISgLxUAQp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -359,7 +358,7 @@
         "# あなたは N 枚のカードの中から 2 枚同時に選び、取ることができます。\n",
         "# 取った 2 枚に書かれた整数の合計がちょうど 101 となるような、カードの選び方の通り数を求めてください。\n",
         "# 1≤ N ≤ 10^6, 1≤ Ai ≤10^9\n",
-        "# 一番最初に考えられる解法は、以下のように「何枚目と何枚目を選ぶか全探索する」\n",
+        "# 「何枚目と何枚目を選ぶか全探索する」\n",
         "# という方法だと思います。つまり、1 ≤ i < j ≤ N を満たすすべての (i,j) の組を全探索し、\n",
         "# A_i + A_ j=101 となる通り数を数え上げるという方法です。\n",
         "# しかし、その解法の場合、N^2 回程度のループを回す必要があります。 N ≤ 10^6 なので、\n",
@@ -371,14 +370,15 @@
         "# 例えば、本問題であれば、以下のような解法を使うと、\n",
         "# 高々 N 回程度のループでプログラムの実行が終わります。\n",
         "\n",
-        "# Ai≥101 のカードはすべて無視する。\n",
+        "# A_i ≥ 101 のカードはすべて無視する。\n",
         "# A_i = 1, A_i = 2, ..., A_i = 100 のカードの枚数を数える。\n",
         "# それぞれ c_1, c_2, ..., c_100 とする。\n",
         "# そのとき、\n",
         "# (c1×c100)+(c2×c99)+(c3×c98)+...+(c50×c51)\n",
         "# が答えである。\n",
         "\n",
-        "# C++ での実装例 <= 分からないが動かすことは出来た。先へ進む。\n",
+        "# C++ での実装例 <= 分からないが動かすことは出来た。先へ進む\n",
+        "\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -471,6 +471,7 @@
         "# 「どのようにしてコードを書けば良いか」分からない人も多いです。\n",
         "# そこで、一つの例として、C++ を学習できる便利なサイトを紹介します。\n",
         "# 非情報系学生のための C/C++ 入門\n",
+        "# 提出結果のエラーコード WA などの意味\n",
         "%%html\n",
         "<style>\n",
         "    tr td:nth-child(1) {\n",
@@ -616,80 +617,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# これを bitset にできないか => 重複を許すので bitset にはそぐわないのか\n",
-        "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "int main () {\n",
-        "    int n, m; cin >> n >> m;\n",
-        "    vector<int> vec(n);\n",
-        "    for (int i=0; i < n ; i++) {\n",
-        "        cin >> vec.at(i);\n",
-        "    }\n",
-        "    bool ans = false;\n",
-        "\n",
-        "    for (int temp = 0; temp < (1 << n); temp++){ // このやり方だと同じカードを拾うのが出来ていない\n",
-        "        bitset<50> bs(temp);\n",
-        "        int sum = 0;\n",
-        "        for (int i = 0; i < bs.size(); i++){\n",
-        "            if (bs.test(i)) sum += vec.at(i);\n",
-        "        }\n",
-        "        if (sum == m) ans = true;\n",
-        "        sum = 0;\n",
-        "    }\n",
-        "\n",
-        "    if (ans) cout << \"Yes\" << endl;\n",
-        "    else cout << \"No\" << endl;\n",
-        "}"
-      ],
-      "metadata": {
-        "id": "lWo-jO1t5ebs",
-        "outputId": "4243487b-ea03-4d54-a217-c885a7610c14",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting temp.cpp\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!g++ temp.cpp; echo 3 10 1 3 5 |./a.out #=> Yes 1 1 3 5\n",
-        "!g++ temp.cpp; echo 3 9 1 3 5 |./a.out #=> No \n",
-        "!g++ temp.cpp; echo 3 9 1 3 2 |./a.out #=> Yes 3 3 2 2"
-      ],
-      "metadata": {
-        "id": "sN53f9MH5eH4",
-        "outputId": "c89cb3a4-49bc-48dd-c721-dc3ba925773f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "No\n",
-            "Yes\n",
-            "No\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# 実験 重複あり全探索 => ネットにあった例\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
@@ -729,9 +656,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "98ca5ecc-a86f-4ac3-9dde-2e589976b01f"
+        "outputId": "e9b898a4-6bc1-4ed6-bf0f-683038da6848"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,110 +683,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# 上のプログラムを理解のために書き直す\n",
-        "# cout はせずに vector<int> を返す関数にしたい => とりあえず失敗!!!!\n",
-        "# 先へ進む\n",
-        "%%script false\n",
-        "\n",
-        "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "vector<vector<int>> dfs(int i, int j, const int row, const int column, const int range_start) {\n",
-        "    vector<vector<int>> result_vec(row, vector<int>(column));\n",
-        "    if ((i == row) && (j == column)) return result_vec;\n",
-        "    else if (i == row) {\n",
-        "        j++;\n",
-        "        i = 0;\n",
-        "    } else {\n",
-        "        for(int k = range_start; k <= range_start + column; k++){\n",
-        "            result_vec.at(i).at(j) = k;\n",
-        "            result_vec += dfs(i + 1, j, row, column, range_start);\n",
-        "        }\n",
-        "    }\n",
-        "}\n",
-        "\n",
-        "string formatVecInt(vector<int> vec){\n",
-        "    string str = \"\";\n",
-        "    str +=\"{\";\n",
-        "    bool isFirst = true;\n",
-        "    for (auto item : vec){\n",
-        "        if(!isFirst) str += \", \";\n",
-        "        str += to_string(item);\n",
-        "        isFirst = false;\n",
-        "    };\n",
-        "    str += \"}\";\n",
-        "    return str;\n",
-        "}\n",
-        "\n",
-        "string formatVecStr(vector<string> vec){\n",
-        "    if (vec.empty()) return \"\";\n",
-        "    string str = \"\";\n",
-        "    str +=\"{\";\n",
-        "    bool isFirst = true;\n",
-        "    for (auto item : vec){\n",
-        "        if(!isFirst) str += \", \";\n",
-        "        // str = str + '\"' + item + '\"';\n",
-        "        str = str + item;\n",
-        "        isFirst = false;\n",
-        "    };\n",
-        "    str += \"}\";\n",
-        "    return str;\n",
-        "}\n",
-        "\n",
-        "int main(void) {\n",
-        "    int row = 2;\n",
-        "    int column = 3;\n",
-        "    int range_start = 1;\n",
-        "\n",
-        "\n",
-        "    vector<vector<int>> vec(row, vector<int> (column));\n",
-        "    vec = dfs(0, 0, row, column, range_start);\n",
-        "\n",
-        "    vector<string> vecstr(vec.size());\n",
-        "    transform(vec.begin(), vec.end(), vecstr.begin(), formatVecInt);\n",
-        "    cout << formatVecStr(vecstr) << endl;\n",
-        "}"
-      ],
-      "metadata": {
-        "id": "yeZH2gN03c8m",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9311e21e-0d46-43eb-a132-01b109b8a7e2"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting temp.cpp\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!g++ -g temp.cpp; ./a.out"
-      ],
-      "metadata": {
-        "id": "tHcSa5ARz4cA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# 4 種類の全探索\n",
         "# 本当に全通り調べ上げる「全探索」大体の場合、多重ループで解けます。\n",
         "# 工夫して探索の通り数を減らす「全探索」\n",
         "# ビット全探索 多重ループではうまくいかない全探索の 1 つです。詳しくは、こちらの記事を参照してください。\n",
         "# 順列全探索 多重ループではうまくいかない全探索の 1 つです。詳しくは、こちらの記事を参照してください。\n",
         "\n",
-        "# 全探索の問題\n",
+        "# 全探索の問題 <= あとでやろう\n",
         "# AtCoder Beginner Contest 144 B - 81 基礎の基礎です。\n",
         "# AtCoder Beginner Contest 150 B - Count ABC 全探索というか、「全通り調べ上げます」。\n",
         "# AtCoder Beginner Contest 122 B - ATCoder これも基本です。\n",
@@ -976,23 +806,24 @@
         "    // 例 1: 2 つの小数 a と b を入力し、a-b の絶対値を小数で出力します。\n",
         "    double a, b;\n",
         "    cin >> a >> b;\n",
-        "    printf(\"%.12lf\\n\", abs(a - b));\n",
+        "    printf(\"%.12lf\\n\", abs(a - b)); // lf は double こと\n",
+        "    cout << fixed << setprecision(12) << abs(a - b) << endl;\n",
         "}"
       ],
       "metadata": {
         "id": "aE93c93UooF7",
-        "outputId": "023e5b2e-8e9c-4840-ae17-807f6ac1cdbf",
+        "outputId": "debbceb5-bfdb-4b93-92e6-48a79e205012",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing temp.cpp\n"
+            "Overwriting temp.cpp\n"
           ]
         }
       ]
@@ -1004,17 +835,18 @@
       ],
       "metadata": {
         "id": "WbAzAKxPs3LZ",
-        "outputId": "16b1f3d6-c904-4997-fb7a-94ece3b30b82",
+        "outputId": "4dea01c3-5853-42eb-e398-a2041a888ff0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "4.010000000000\n",
             "4.010000000000\n"
           ]
         }
@@ -1079,6 +911,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "ldKd1YFL6Rpu"
+      }
     },
     {
       "cell_type": "code",
