Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMtRCkKeviN1tIISgLxUAQp",
+      "authorship_tag": "ABX9TyOgHXQ0I0vbklNyr9jcUtvd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,18 +45,16 @@
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
-        "int main() {\n",
-        "  cout << \"Hello World!\" << endl;\n",
-        "}"
+        "int main () {cout << \"Hello World!\" << endl;}"
       ],
       "metadata": {
         "id": "JFJZUouD5YM5",
-        "outputId": "52ec0dee-74bb-49fe-9b3e-d3acbfc62bb7",
+        "outputId": "e778c117-e4ce-4c94-f6cd-e181fe0eaedf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,12 +72,12 @@
       ],
       "metadata": {
         "id": "0smnD4hN5vNd",
-        "outputId": "2e21a9aa-244d-4b0c-d1b1-de6a1cc6f331",
+        "outputId": "2eac7e45-430b-4fbf-9c5a-a978b8e1c36c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -914,15 +912,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "ldKd1YFL6Rpu"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 三角関数 sin/cos/tan\n",
@@ -941,7 +930,7 @@
         "    cin >> x;\n",
         "    double y = x / 180.0 * pi;\n",
         "    cout << y << endl;\n",
-        "    printf(\"%.12lf\\n\", sin(x / 180.0 * pi));\n",
+        "    printf(\"%.12lf\\n\", sin(x / 180.0 * pi)); // lf は double のこと , long float の意か?\n",
         "    printf(\"%.12lf\\n\", cos(x / 180.0 * pi));\n",
         "    printf(\"%.12lf\\n\", tan(x / 180.0 * pi));\n",
         "    cout << fixed << setprecision(12);\n",
@@ -1011,7 +1000,7 @@
         "    cout << setprecision(16) << M_PI*1000 << endl;\n",
         "    cout << setprecision(16) << M_PI/1000 << endl;\n",
         "    double x = Mi_PI;\n",
-        "    cout << fixed << setprecision(12);\n",
+        "    cout << fixed << setprecision(12); // fixed と併用すると小数点以下が決められる\n",
         "    cout << sin(M_PI/6) << endl;\n",
         "    cout << cos(M_PI/6) << endl;\n",
         "    cout << tan(M_PI/6) << endl;\n",
@@ -1067,7 +1056,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# 実験 to_string の桁数\n",
+        "# 実験 to_string の桁数 \n",
+        "# cout の小数点以下の桁数を固定にする方法\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -1306,6 +1296,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "ldKd1YFL6Rpu"
+      }
     },
     {
       "cell_type": "code",
